--- a/src/scss/FlashCard.scss
+++ b/src/scss/FlashCard.scss
@@ -102,7 +102,7 @@ $desktop-width: 1024px;
       align-items: center;
 
       &-next-prev {
-        margin-top: 350px;
+        margin-top: 300px;
         display: flex;
         flex-direction: row;
         align-items: center;
@@ -124,7 +124,7 @@ $desktop-width: 1024px;
   }
 
   .theCard {
-    height: 83%;
+    height: 95%;
   }
 }
 
